Create an outcome per path for Egypt
The goal of this story is to migrate the flow for Egypt to
use the outcome per path strategy.

Within, flat content have been introduced for Egypt. The flat content
will be linked and form part of the outcome per path flow.

Given the aforementioned, the test artefacts haven't been affected by
this change.

--- a/test/data/marriage-abroad-files.yml
+++ b/test/data/marriage-abroad-files.yml
@@ -117,6 +117,25 @@ lib/smart_answer_flows/marriage-abroad/outcomes/countries/denmark/uk/partner_loc
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/denmark/uk/partner_local/_same_sex.govspeak.erb: ac7df60c085f94264a9d675e3fde244f
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/denmark/uk/partner_other/_opposite_sex.govspeak.erb: 6c8dd251ffaaa9584a555a49c7016482
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/denmark/uk/partner_other/_same_sex.govspeak.erb: ac7df60c085f94264a9d675e3fde244f
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/egypt/_title.govspeak.erb: 634e6af91bcf937249a01aa66ad32da8
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/egypt/ceremony_country/partner_british/_opposite_sex.govspeak.erb: 498ec02238231a03e2f199dfed153dc7
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/egypt/ceremony_country/partner_british/_same_sex.govspeak.erb: 6cd2d3e2fdc4c164ddc7cfbf34dea6b9
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/egypt/ceremony_country/partner_local/_opposite_sex.govspeak.erb: dc74d2efb223a26543db8fd21650a2d2
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/egypt/ceremony_country/partner_local/_same_sex.govspeak.erb: 6cd2d3e2fdc4c164ddc7cfbf34dea6b9
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/egypt/ceremony_country/partner_other/_opposite_sex.govspeak.erb: 5d41ad90913d596a43316d9de971763a
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/egypt/ceremony_country/partner_other/_same_sex.govspeak.erb: 6cd2d3e2fdc4c164ddc7cfbf34dea6b9
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/egypt/third_country/partner_british/_opposite_sex.govspeak.erb: c797969da6b14ff248cbc9f7ab638a31
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/egypt/third_country/partner_british/_same_sex.govspeak.erb: 6cd2d3e2fdc4c164ddc7cfbf34dea6b9
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/egypt/third_country/partner_local/_opposite_sex.govspeak.erb: f3069ba2fecb471c9ced24c4a2e34c55
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/egypt/third_country/partner_local/_same_sex.govspeak.erb: 6cd2d3e2fdc4c164ddc7cfbf34dea6b9
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/egypt/third_country/partner_other/_opposite_sex.govspeak.erb: 038fa4e11b47bd82cff17344b733df0d
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/egypt/third_country/partner_other/_same_sex.govspeak.erb: 6cd2d3e2fdc4c164ddc7cfbf34dea6b9
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/egypt/uk/partner_british/_opposite_sex.govspeak.erb: ab9e542d43ce0d1d6c171775168d7fb9
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/egypt/uk/partner_british/_same_sex.govspeak.erb: 6cd2d3e2fdc4c164ddc7cfbf34dea6b9
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/egypt/uk/partner_local/_opposite_sex.govspeak.erb: 2101c5cfe5315db3fee638951ff07563
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/egypt/uk/partner_local/_same_sex.govspeak.erb: 6cd2d3e2fdc4c164ddc7cfbf34dea6b9
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/egypt/uk/partner_other/_opposite_sex.govspeak.erb: f0f36315755e0359c2a5796dc26e069f
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/egypt/uk/partner_other/_same_sex.govspeak.erb: 6cd2d3e2fdc4c164ddc7cfbf34dea6b9
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/france/_opposite_sex.govspeak.erb: 52cc5676000cdd6fad6e0f20c0cbc0fa
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/france/_same_sex.govspeak.erb: 52cc5676000cdd6fad6e0f20c0cbc0fa
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/france/_title.govspeak.erb: 89e48e72170d1df47f28b434ae630ecf
