--- a/test/data/marriage-abroad-files.yml
+++ b/test/data/marriage-abroad-files.yml
@@ -265,6 +265,26 @@ lib/smart_answer_flows/marriage-abroad/outcomes/countries/portugal/uk/partner_lo
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/portugal/uk/partner_local/_same_sex.govspeak.erb: bc358a923fd8c8e4eff4ba3198f23121
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/portugal/uk/partner_other/_opposite_sex.govspeak.erb: bc358a923fd8c8e4eff4ba3198f23121
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/portugal/uk/partner_other/_same_sex.govspeak.erb: bc358a923fd8c8e4eff4ba3198f23121
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/south-africa/_title.govspeak.erb: c8e789a1f94b45efe48e6b8e2f60f5f8
+? lib/smart_answer_flows/marriage-abroad/outcomes/countries/south-africa/ceremony_country/partner_british/_opposite_sex.govspeak.erb
+: 6aac5689633dcc0f4e9101cc36c8b54e
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/south-africa/ceremony_country/partner_british/_same_sex.govspeak.erb: 6aac5689633dcc0f4e9101cc36c8b54e
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/south-africa/ceremony_country/partner_local/_opposite_sex.govspeak.erb: 135639262eb91a1336fa2eb19a4904d7
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/south-africa/ceremony_country/partner_local/_same_sex.govspeak.erb: 135639262eb91a1336fa2eb19a4904d7
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/south-africa/ceremony_country/partner_other/_opposite_sex.govspeak.erb: 79be7dd6abd824e56c642a08c57ebd3e
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/south-africa/ceremony_country/partner_other/_same_sex.govspeak.erb: 79be7dd6abd824e56c642a08c57ebd3e
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/south-africa/third_country/partner_british/_opposite_sex.govspeak.erb: 6aac5689633dcc0f4e9101cc36c8b54e
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/south-africa/third_country/partner_british/_same_sex.govspeak.erb: 6aac5689633dcc0f4e9101cc36c8b54e
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/south-africa/third_country/partner_local/_opposite_sex.govspeak.erb: 135639262eb91a1336fa2eb19a4904d7
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/south-africa/third_country/partner_local/_same_sex.govspeak.erb: 135639262eb91a1336fa2eb19a4904d7
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/south-africa/third_country/partner_other/_opposite_sex.govspeak.erb: 79be7dd6abd824e56c642a08c57ebd3e
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/south-africa/third_country/partner_other/_same_sex.govspeak.erb: 79be7dd6abd824e56c642a08c57ebd3e
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/south-africa/uk/partner_british/_opposite_sex.govspeak.erb: 6aac5689633dcc0f4e9101cc36c8b54e
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/south-africa/uk/partner_british/_same_sex.govspeak.erb: 6aac5689633dcc0f4e9101cc36c8b54e
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/south-africa/uk/partner_local/_opposite_sex.govspeak.erb: 135639262eb91a1336fa2eb19a4904d7
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/south-africa/uk/partner_local/_same_sex.govspeak.erb: 135639262eb91a1336fa2eb19a4904d7
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/south-africa/uk/partner_other/_opposite_sex.govspeak.erb: 79be7dd6abd824e56c642a08c57ebd3e
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/south-africa/uk/partner_other/_same_sex.govspeak.erb: 79be7dd6abd824e56c642a08c57ebd3e
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/sweden/_title.govspeak.erb: 0a2cc626a2299c1297363135c8aca02b
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/sweden/ceremony_country/partner_british/_opposite_sex.govspeak.erb: 026c60e08b84cbee3f2ac71d12eb6f4e
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/sweden/ceremony_country/partner_british/_same_sex.govspeak.erb: e3a0f811317edef414312dafd7a11b77
