Update the consular fees table
This commit updates the consular fees table for the following outcomes:

- marriage-abroad/chile/ceremony_country/partner_local/same_sex
- marriage-abroad/chile/third_country/partner_local/same_sex
- marriage-abroad/chile/uk/partner_local/same_sex

These files have been manually updated by the content designer and this
Commit makes changes to keep and reflect the changes in the services
table yams file.

NO REGRESSSION TESTS HAVE BEEN AFFECTED.

--- a/lib/data/marriage_abroad_services.yml
+++ b/lib/data/marriage_abroad_services.yml
@@ -318,11 +318,7 @@ chile:
       - :issuing_cni_or_nulla_osta
   same_sex:
     default:
-      partner_british:
-      - :receiving_notice_of_registration
-      - :registering_marriage
-      - :issuing_marriage_certificate
-      partner_other:
+      default:
       - :receiving_notice_of_registration
       - :registering_marriage
       - :issuing_marriage_certificate
