--- a/lib/data/marriage_abroad_services.yml
+++ b/lib/data/marriage_abroad_services.yml
@@ -650,6 +650,9 @@ tajikistan:
   payment_partial_name: pay_in_local_currency_ceremony_country_name
 tunisia:
   opposite_sex:
+    default:
+      default:
+      - :issuing_cni_or_nulla_osta
     ceremony_country:
       default:
       - :receiving_notice_of_marriage
