--- a/test/data/marriage-abroad-files.yml
+++ b/test/data/marriage-abroad-files.yml
@@ -304,6 +304,25 @@ lib/smart_answer_flows/marriage-abroad/outcomes/countries/sweden/uk/partner_loca
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/sweden/uk/partner_local/_same_sex.govspeak.erb: aaa5cef740c7a1835949e3c7b22d0bc8
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/sweden/uk/partner_other/_opposite_sex.govspeak.erb: 08a20430b686059bf67eb090ca4a1904
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/sweden/uk/partner_other/_same_sex.govspeak.erb: aaa5cef740c7a1835949e3c7b22d0bc8
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/tanzania/_title.govspeak.erb: 27d94ee8cc6bbba62805ae28776ff03b
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/tanzania/ceremony_country/partner_british/_opposite_sex.govspeak.erb: b3438978fc5e89f8946c6f37762f2c80
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/tanzania/ceremony_country/partner_british/_same_sex.govspeak.erb: 13840a0ab33e959767dbedad82ed340a
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/tanzania/ceremony_country/partner_local/_opposite_sex.govspeak.erb: 36385633d87c55c78a00cff45462c4cd
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/tanzania/ceremony_country/partner_local/_same_sex.govspeak.erb: 13840a0ab33e959767dbedad82ed340a
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/tanzania/ceremony_country/partner_other/_opposite_sex.govspeak.erb: 36385633d87c55c78a00cff45462c4cd
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/tanzania/ceremony_country/partner_other/_same_sex.govspeak.erb: 13840a0ab33e959767dbedad82ed340a
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/tanzania/third_country/partner_british/_opposite_sex.govspeak.erb: a9ca20cb0fcfcf54252c106537a098af
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/tanzania/third_country/partner_british/_same_sex.govspeak.erb: 13840a0ab33e959767dbedad82ed340a
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/tanzania/third_country/partner_local/_opposite_sex.govspeak.erb: f40aae63be2713b77391e59ed0b959b9
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/tanzania/third_country/partner_local/_same_sex.govspeak.erb: 13840a0ab33e959767dbedad82ed340a
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/tanzania/third_country/partner_other/_opposite_sex.govspeak.erb: f40aae63be2713b77391e59ed0b959b9
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/tanzania/third_country/partner_other/_same_sex.govspeak.erb: 13840a0ab33e959767dbedad82ed340a
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/tanzania/uk/partner_british/_opposite_sex.govspeak.erb: e3c8077974ca55239d5f8e83caffbeeb
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/tanzania/uk/partner_british/_same_sex.govspeak.erb: 13840a0ab33e959767dbedad82ed340a
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/tanzania/uk/partner_local/_opposite_sex.govspeak.erb: 886fddc38ba1fade6c7a7bdeea02cc9b
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/tanzania/uk/partner_local/_same_sex.govspeak.erb: 13840a0ab33e959767dbedad82ed340a
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/tanzania/uk/partner_other/_opposite_sex.govspeak.erb: 886fddc38ba1fade6c7a7bdeea02cc9b
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/tanzania/uk/partner_other/_same_sex.govspeak.erb: 13840a0ab33e959767dbedad82ed340a
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/thailand/_opposite_sex.govspeak.erb: 835e9b13b13e4bbf2d336298764e46c3
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/thailand/_same_sex.govspeak.erb: 8b5b18c463388127a068c7de509d3683
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/thailand/_title.govspeak.erb: 0fe584efebbddb53398d749efcc43ea9
