Create an outcome template per path for Colombia
Create an outcome template for each path through the flow for Colombia in
marriage-aboard.

These new outcomes re-use the exising `consular_fees_table_items` and
`how_to_pay` partial templates.

No test artefacts were affected by these changes.

--- a/test/data/marriage-abroad-files.yml
+++ b/test/data/marriage-abroad-files.yml
@@ -101,6 +101,25 @@ lib/smart_answer_flows/marriage-abroad/outcomes/countries/chile/uk/partner_other
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/china/_opposite_sex.govspeak.erb: b7fcf64ad0f6c2222af07fe74c5ad27c
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/china/_same_sex.govspeak.erb: 4dd6d096a63386e1cd3db8168262c6e8
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/china/_title.govspeak.erb: 475112c09ab99bdd0d610ab1e79cb0fd
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/colombia/_title.govspeak.erb: 1174aaf165516eba4c46bce4d4f26748
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/colombia/ceremony_country/partner_british/_opposite_sex.govspeak.erb: bbc5ae85ada490b5f642868541332162
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/colombia/ceremony_country/partner_british/_same_sex.govspeak.erb: b56ee3b955d674b0639e5b5e59f60a06
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/colombia/ceremony_country/partner_local/_opposite_sex.govspeak.erb: bbc5ae85ada490b5f642868541332162
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/colombia/ceremony_country/partner_local/_same_sex.govspeak.erb: 77c3f42c91843b0f2a81e05273aa9e5d
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/colombia/ceremony_country/partner_other/_opposite_sex.govspeak.erb: bbc5ae85ada490b5f642868541332162
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/colombia/ceremony_country/partner_other/_same_sex.govspeak.erb: 77c3f42c91843b0f2a81e05273aa9e5d
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/colombia/third_country/partner_british/_opposite_sex.govspeak.erb: bbc5ae85ada490b5f642868541332162
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/colombia/third_country/partner_british/_same_sex.govspeak.erb: b56ee3b955d674b0639e5b5e59f60a06
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/colombia/third_country/partner_local/_opposite_sex.govspeak.erb: bbc5ae85ada490b5f642868541332162
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/colombia/third_country/partner_local/_same_sex.govspeak.erb: 77c3f42c91843b0f2a81e05273aa9e5d
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/colombia/third_country/partner_other/_opposite_sex.govspeak.erb: bbc5ae85ada490b5f642868541332162
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/colombia/third_country/partner_other/_same_sex.govspeak.erb: 77c3f42c91843b0f2a81e05273aa9e5d
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/colombia/uk/partner_british/_opposite_sex.govspeak.erb: bbc5ae85ada490b5f642868541332162
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/colombia/uk/partner_british/_same_sex.govspeak.erb: b56ee3b955d674b0639e5b5e59f60a06
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/colombia/uk/partner_local/_opposite_sex.govspeak.erb: bbc5ae85ada490b5f642868541332162
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/colombia/uk/partner_local/_same_sex.govspeak.erb: 77c3f42c91843b0f2a81e05273aa9e5d
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/colombia/uk/partner_other/_opposite_sex.govspeak.erb: bbc5ae85ada490b5f642868541332162
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/colombia/uk/partner_other/_same_sex.govspeak.erb: 77c3f42c91843b0f2a81e05273aa9e5d
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/denmark/_title.govspeak.erb: f3f69700147ffd739c4d3dc86f2ec22b
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/denmark/ceremony_country/partner_british/_opposite_sex.govspeak.erb: 7d0c5e38504d5db6d760347c84d23bbd
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/denmark/ceremony_country/partner_british/_same_sex.govspeak.erb: c7e41bcc2c3c2c879ccb39b932f186d3
