Add an option for tenants from else where
This commit updates the `what_nationality?` question to allow users
to select an  option that identifies the tenant is from else where.

i.e "somewhere-else": "From somewhere else or you don’t know"

If the user selects the aforementioned option, they are sent to
`outcome_can_not_rent` outcome. This is used as a temporary stub
and will be changed in the next commit.

Unit tests have been updated to accept the `somewhere-else` option.
Regression tests have been updated to test this new option.

--- a/test/data/landlord-immigration-check-responses-and-expected-results.yml
+++ b/test/data/landlord-immigration-check-responses-and-expected-results.yml
@@ -285,6 +285,14 @@
   - 'no'
   :next_node: :outcome_can_not_continue_renting
   :outcome_node: true
+- :current_node: :what_nationality?
+  :responses:
+  - B1 1PW
+  - 'yes'
+  - 'yes'
+  - somewhere-else
+  :next_node: :outcome_can_not_rent
+  :outcome_node: true
 - :current_node: :tenant_over_18?
   :responses:
   - B1 1PW
