Create an outcome per path for Cyprus in Marriage Abroad
Copy the test artefacts in to the templates directory, rename the
files from .txt to .erb, remove the titles, and add the title
partial. Add cyprus to the list of countries with an outcome per path.

Update the checksums file, adding the new templates.

The test artefacts have not been changed.

--- a/test/data/marriage-abroad-files.yml
+++ b/test/data/marriage-abroad-files.yml
@@ -2,7 +2,7 @@
 lib/data/marriage_abroad_services.yml: 12105fab3d6d7a884771035249c782cd
 lib/data/rates/marriage_abroad_consular_fees.yml: 20afc9d15de06e0a199761433b055d9f
 lib/smart_answer/calculators/country_name_formatter.rb: 583df7103672f581bf5510732c1b2be1
-lib/smart_answer/calculators/marriage_abroad_calculator.rb: 724c5c531d8172d16e41a19bc8a23ad6
+lib/smart_answer/calculators/marriage_abroad_calculator.rb: a73125a1a22ba5091eb5a802fe8f57cf
 lib/smart_answer/calculators/marriage_abroad_data_query.rb: bccc1656f1018329043efef1aa889dfb
 lib/smart_answer/calculators/registrations_data_query.rb: 3afcd514ecedadd19b0db67f54ac5ea6
 lib/smart_answer_flows/marriage-abroad/marriage_abroad.govspeak.erb: b4d0cfc1c7c4776d968c9b5b6df85027
@@ -120,6 +120,25 @@ lib/smart_answer_flows/marriage-abroad/outcomes/countries/colombia/uk/partner_lo
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/colombia/uk/partner_local/_same_sex.govspeak.erb: 77c3f42c91843b0f2a81e05273aa9e5d
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/colombia/uk/partner_other/_opposite_sex.govspeak.erb: bbc5ae85ada490b5f642868541332162
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/colombia/uk/partner_other/_same_sex.govspeak.erb: 77c3f42c91843b0f2a81e05273aa9e5d
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/cyprus/_title.govspeak.erb: 669bca4d320cacd23b7377f53a673368
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/cyprus/ceremony_country/partner_british/_opposite_sex.erb: 22392bd95052daeca4a90483886792c5
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/cyprus/ceremony_country/partner_british/_same_sex.erb: 15c34d28e33b261bf597b4261a33ceb9
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/cyprus/ceremony_country/partner_local/_opposite_sex.erb: bfd3aa911514a68c3a142895a27ddfd1
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/cyprus/ceremony_country/partner_local/_same_sex.erb: 75c84214e95255fee83f60af9ee3d6c8
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/cyprus/ceremony_country/partner_other/_opposite_sex.erb: bfd3aa911514a68c3a142895a27ddfd1
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/cyprus/ceremony_country/partner_other/_same_sex.erb: 75c84214e95255fee83f60af9ee3d6c8
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/cyprus/third_country/partner_british/_opposite_sex.erb: e0d2dfe35a8e9e1bf71930adc4290f17
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/cyprus/third_country/partner_british/_same_sex.erb: a38104521806aad71c7bed759b158fa3
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/cyprus/third_country/partner_local/_opposite_sex.erb: 3a661c4934260bbb5a99780c72544dc8
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/cyprus/third_country/partner_local/_same_sex.erb: 75c84214e95255fee83f60af9ee3d6c8
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/cyprus/third_country/partner_other/_opposite_sex.erb: 3a661c4934260bbb5a99780c72544dc8
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/cyprus/third_country/partner_other/_same_sex.erb: 75c84214e95255fee83f60af9ee3d6c8
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/cyprus/uk/partner_british/_opposite_sex.erb: 2092c9e485c85c071a823b574ed0f781
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/cyprus/uk/partner_british/_same_sex.erb: a38104521806aad71c7bed759b158fa3
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/cyprus/uk/partner_local/_opposite_sex.erb: b763dfcf19bed6095f88b5c6b73585f8
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/cyprus/uk/partner_local/_same_sex.erb: 75c84214e95255fee83f60af9ee3d6c8
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/cyprus/uk/partner_other/_opposite_sex.erb: b763dfcf19bed6095f88b5c6b73585f8
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/cyprus/uk/partner_other/_same_sex.erb: 75c84214e95255fee83f60af9ee3d6c8
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/denmark/_title.govspeak.erb: f3f69700147ffd739c4d3dc86f2ec22b
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/denmark/ceremony_country/partner_british/_opposite_sex.govspeak.erb: 7d0c5e38504d5db6d760347c84d23bbd
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/denmark/ceremony_country/partner_british/_same_sex.govspeak.erb: c7e41bcc2c3c2c879ccb39b932f186d3
