--- a/test/data/landlord-immigration-check-responses-and-expected-results.yml
+++ b/test/data/landlord-immigration-check-responses-and-expected-results.yml
@@ -329,6 +329,106 @@
   - somewhere-else
   - 'no'
   - 'no'
+  :next_node: :family_permit?
+  :outcome_node: false
+- :current_node: :family_permit?
+  :responses:
+  - B1 1PW
+  - 'yes'
+  - 'yes'
+  - somewhere-else
+  - 'no'
+  - 'no'
+  - 'yes'
+  :next_node: :outcome_can_rent
+  :outcome_node: true
+- :current_node: :family_permit?
+  :responses:
+  - B1 1PW
+  - 'yes'
+  - 'yes'
+  - somewhere-else
+  - 'no'
+  - 'no'
+  - 'no'
+  :next_node: :has_residence_card_or_eu_eea_swiss_family_member?
+  :outcome_node: false
+- :current_node: :has_residence_card_or_eu_eea_swiss_family_member?
+  :responses:
+  - B1 1PW
+  - 'yes'
+  - 'yes'
+  - somewhere-else
+  - 'no'
+  - 'no'
+  - 'no'
+  - 'yes'
+  :next_node: :outcome_can_rent_but_check_will_be_needed_again
+  :outcome_node: true
+- :current_node: :has_residence_card_or_eu_eea_swiss_family_member?
+  :responses:
+  - B1 1PW
+  - 'yes'
+  - 'yes'
+  - somewhere-else
+  - 'no'
+  - 'no'
+  - 'no'
+  - 'no'
+  :next_node: :has_documents?
+  :outcome_node: false
+- :current_node: :has_documents?
+  :responses:
+  - B1 1PW
+  - 'yes'
+  - 'yes'
+  - somewhere-else
+  - 'no'
+  - 'no'
+  - 'no'
+  - 'no'
+  - 'yes'
+  :next_node: :outcome_can_rent
+  :outcome_node: true
+- :current_node: :has_documents?
+  :responses:
+  - B1 1PW
+  - 'yes'
+  - 'yes'
+  - somewhere-else
+  - 'no'
+  - 'no'
+  - 'no'
+  - 'no'
+  - 'no'
+  :next_node: :time_limited_to_remain?
+  :outcome_node: false
+- :current_node: :time_limited_to_remain?
+  :responses:
+  - B1 1PW
+  - 'yes'
+  - 'yes'
+  - somewhere-else
+  - 'no'
+  - 'no'
+  - 'no'
+  - 'no'
+  - 'no'
+  - 'yes'
+  :next_node: :outcome_can_rent_but_check_will_be_needed_again
+  :outcome_node: true
+- :current_node: :time_limited_to_remain?
+  :responses:
+  - B1 1PW
+  - 'yes'
+  - 'yes'
+  - somewhere-else
+  - 'no'
+  - 'no'
+  - 'no'
+  - 'no'
+  - 'no'
+  - 'no'
   :next_node: :has_other_documents?
   :outcome_node: false
 - :current_node: :has_other_documents?
@@ -337,6 +437,10 @@
   - 'yes'
   - 'yes'
   - somewhere-else
+  - 'no'
+  - 'no'
+  - 'no'
+  - 'no'
   - 'no'
   - 'no'
   - 'yes'
@@ -348,6 +452,10 @@
   - 'yes'
   - 'yes'
   - somewhere-else
+  - 'no'
+  - 'no'
+  - 'no'
+  - 'no'
   - 'no'
   - 'no'
   - 'no'
