--- a/test/data/marriage-abroad-responses-and-expected-results.yml
+++ b/test/data/marriage-abroad-responses-and-expected-results.yml
@@ -6250,7 +6250,7 @@
   - uk
   - partner_british
   - opposite_sex
-  :next_node: :outcome_opposite_sex_marriage_in_commonwealth_countries
+  :next_node: :outcome_marriage_abroad_in_country
   :outcome_node: true
 - :current_node: :partner_opposite_or_same_sex?
   :responses:
@@ -6258,7 +6258,7 @@
   - uk
   - partner_british
   - same_sex
-  :next_node: :outcome_same_sex_civil_partnership_in_consular_countries
+  :next_node: :outcome_marriage_abroad_in_country
   :outcome_node: true
 - :current_node: :what_is_your_partners_nationality?
   :responses:
@@ -6273,7 +6273,7 @@
   - uk
   - partner_local
   - opposite_sex
-  :next_node: :outcome_opposite_sex_marriage_in_commonwealth_countries
+  :next_node: :outcome_marriage_abroad_in_country
   :outcome_node: true
 - :current_node: :partner_opposite_or_same_sex?
   :responses:
@@ -6281,7 +6281,7 @@
   - uk
   - partner_local
   - same_sex
-  :next_node: :outcome_same_sex_civil_partnership_in_consular_countries
+  :next_node: :outcome_marriage_abroad_in_country
   :outcome_node: true
 - :current_node: :what_is_your_partners_nationality?
   :responses:
@@ -6296,7 +6296,7 @@
   - uk
   - partner_other
   - opposite_sex
-  :next_node: :outcome_opposite_sex_marriage_in_commonwealth_countries
+  :next_node: :outcome_marriage_abroad_in_country
   :outcome_node: true
 - :current_node: :partner_opposite_or_same_sex?
   :responses:
@@ -6304,7 +6304,7 @@
   - uk
   - partner_other
   - same_sex
-  :next_node: :outcome_same_sex_civil_partnership_in_consular_countries
+  :next_node: :outcome_marriage_abroad_in_country
   :outcome_node: true
 - :current_node: :legal_residency?
   :responses:
@@ -6325,7 +6325,7 @@
   - ceremony_country
   - partner_british
   - opposite_sex
-  :next_node: :outcome_opposite_sex_marriage_in_commonwealth_countries
+  :next_node: :outcome_marriage_abroad_in_country
   :outcome_node: true
 - :current_node: :partner_opposite_or_same_sex?
   :responses:
@@ -6333,7 +6333,7 @@
   - ceremony_country
   - partner_british
   - same_sex
-  :next_node: :outcome_same_sex_civil_partnership_in_consular_countries
+  :next_node: :outcome_marriage_abroad_in_country
   :outcome_node: true
 - :current_node: :what_is_your_partners_nationality?
   :responses:
@@ -6348,7 +6348,7 @@
   - ceremony_country
   - partner_local
   - opposite_sex
-  :next_node: :outcome_opposite_sex_marriage_in_commonwealth_countries
+  :next_node: :outcome_marriage_abroad_in_country
   :outcome_node: true
 - :current_node: :partner_opposite_or_same_sex?
   :responses:
@@ -6356,7 +6356,7 @@
   - ceremony_country
   - partner_local
   - same_sex
-  :next_node: :outcome_same_sex_civil_partnership_in_consular_countries
+  :next_node: :outcome_marriage_abroad_in_country
   :outcome_node: true
 - :current_node: :what_is_your_partners_nationality?
   :responses:
@@ -6371,7 +6371,7 @@
   - ceremony_country
   - partner_other
   - opposite_sex
-  :next_node: :outcome_opposite_sex_marriage_in_commonwealth_countries
+  :next_node: :outcome_marriage_abroad_in_country
   :outcome_node: true
 - :current_node: :partner_opposite_or_same_sex?
   :responses:
@@ -6379,7 +6379,7 @@
   - ceremony_country
   - partner_other
   - same_sex
-  :next_node: :outcome_same_sex_civil_partnership_in_consular_countries
+  :next_node: :outcome_marriage_abroad_in_country
   :outcome_node: true
 - :current_node: :legal_residency?
   :responses:
@@ -6400,7 +6400,7 @@
   - third_country
   - partner_british
   - opposite_sex
-  :next_node: :outcome_opposite_sex_marriage_in_commonwealth_countries
+  :next_node: :outcome_marriage_abroad_in_country
   :outcome_node: true
 - :current_node: :partner_opposite_or_same_sex?
   :responses:
@@ -6408,7 +6408,7 @@
   - third_country
   - partner_british
   - same_sex
-  :next_node: :outcome_same_sex_civil_partnership_in_consular_countries
+  :next_node: :outcome_marriage_abroad_in_country
   :outcome_node: true
 - :current_node: :what_is_your_partners_nationality?
   :responses:
@@ -6423,7 +6423,7 @@
   - third_country
   - partner_local
   - opposite_sex
-  :next_node: :outcome_opposite_sex_marriage_in_commonwealth_countries
+  :next_node: :outcome_marriage_abroad_in_country
   :outcome_node: true
 - :current_node: :partner_opposite_or_same_sex?
   :responses:
@@ -6431,7 +6431,7 @@
   - third_country
   - partner_local
   - same_sex
-  :next_node: :outcome_same_sex_civil_partnership_in_consular_countries
+  :next_node: :outcome_marriage_abroad_in_country
   :outcome_node: true
 - :current_node: :what_is_your_partners_nationality?
   :responses:
@@ -6446,7 +6446,7 @@
   - third_country
   - partner_other
   - opposite_sex
-  :next_node: :outcome_opposite_sex_marriage_in_commonwealth_countries
+  :next_node: :outcome_marriage_abroad_in_country
   :outcome_node: true
 - :current_node: :partner_opposite_or_same_sex?
   :responses:
@@ -6454,7 +6454,7 @@
   - third_country
   - partner_other
   - same_sex
-  :next_node: :outcome_same_sex_civil_partnership_in_consular_countries
+  :next_node: :outcome_marriage_abroad_in_country
   :outcome_node: true
 - :current_node: :country_of_ceremony?
   :responses:
@@ -8322,6 +8322,236 @@
   :responses:
   - french-polynesia
   :next_node: :outcome_marriage_in_france_or_french_overseas_territory
+  :outcome_node: true
+- :current_node: :country_of_ceremony?
+  :responses:
+  - gambia
+  :next_node: :legal_residency?
+  :outcome_node: false
+- :current_node: :legal_residency?
+  :responses:
+  - gambia
+  - uk
+  :next_node: :what_is_your_partners_nationality?
+  :outcome_node: false
+- :current_node: :what_is_your_partners_nationality?
+  :responses:
+  - gambia
+  - uk
+  - partner_british
+  :next_node: :partner_opposite_or_same_sex?
+  :outcome_node: false
+- :current_node: :partner_opposite_or_same_sex?
+  :responses:
+  - gambia
+  - uk
+  - partner_british
+  - opposite_sex
+  :next_node: :outcome_opposite_sex_marriage_in_commonwealth_countries
+  :outcome_node: true
+- :current_node: :partner_opposite_or_same_sex?
+  :responses:
+  - gambia
+  - uk
+  - partner_british
+  - same_sex
+  :next_node: :outcome_same_sex_marriage_and_civil_partnership_not_possible
+  :outcome_node: true
+- :current_node: :what_is_your_partners_nationality?
+  :responses:
+  - gambia
+  - uk
+  - partner_local
+  :next_node: :partner_opposite_or_same_sex?
+  :outcome_node: false
+- :current_node: :partner_opposite_or_same_sex?
+  :responses:
+  - gambia
+  - uk
+  - partner_local
+  - opposite_sex
+  :next_node: :outcome_opposite_sex_marriage_in_commonwealth_countries
+  :outcome_node: true
+- :current_node: :partner_opposite_or_same_sex?
+  :responses:
+  - gambia
+  - uk
+  - partner_local
+  - same_sex
+  :next_node: :outcome_same_sex_marriage_and_civil_partnership_not_possible
+  :outcome_node: true
+- :current_node: :what_is_your_partners_nationality?
+  :responses:
+  - gambia
+  - uk
+  - partner_other
+  :next_node: :partner_opposite_or_same_sex?
+  :outcome_node: false
+- :current_node: :partner_opposite_or_same_sex?
+  :responses:
+  - gambia
+  - uk
+  - partner_other
+  - opposite_sex
+  :next_node: :outcome_opposite_sex_marriage_in_commonwealth_countries
+  :outcome_node: true
+- :current_node: :partner_opposite_or_same_sex?
+  :responses:
+  - gambia
+  - uk
+  - partner_other
+  - same_sex
+  :next_node: :outcome_same_sex_marriage_and_civil_partnership_not_possible
+  :outcome_node: true
+- :current_node: :legal_residency?
+  :responses:
+  - gambia
+  - ceremony_country
+  :next_node: :what_is_your_partners_nationality?
+  :outcome_node: false
+- :current_node: :what_is_your_partners_nationality?
+  :responses:
+  - gambia
+  - ceremony_country
+  - partner_british
+  :next_node: :partner_opposite_or_same_sex?
+  :outcome_node: false
+- :current_node: :partner_opposite_or_same_sex?
+  :responses:
+  - gambia
+  - ceremony_country
+  - partner_british
+  - opposite_sex
+  :next_node: :outcome_opposite_sex_marriage_in_commonwealth_countries
+  :outcome_node: true
+- :current_node: :partner_opposite_or_same_sex?
+  :responses:
+  - gambia
+  - ceremony_country
+  - partner_british
+  - same_sex
+  :next_node: :outcome_same_sex_marriage_and_civil_partnership_not_possible
+  :outcome_node: true
+- :current_node: :what_is_your_partners_nationality?
+  :responses:
+  - gambia
+  - ceremony_country
+  - partner_local
+  :next_node: :partner_opposite_or_same_sex?
+  :outcome_node: false
+- :current_node: :partner_opposite_or_same_sex?
+  :responses:
+  - gambia
+  - ceremony_country
+  - partner_local
+  - opposite_sex
+  :next_node: :outcome_opposite_sex_marriage_in_commonwealth_countries
+  :outcome_node: true
+- :current_node: :partner_opposite_or_same_sex?
+  :responses:
+  - gambia
+  - ceremony_country
+  - partner_local
+  - same_sex
+  :next_node: :outcome_same_sex_marriage_and_civil_partnership_not_possible
+  :outcome_node: true
+- :current_node: :what_is_your_partners_nationality?
+  :responses:
+  - gambia
+  - ceremony_country
+  - partner_other
+  :next_node: :partner_opposite_or_same_sex?
+  :outcome_node: false
+- :current_node: :partner_opposite_or_same_sex?
+  :responses:
+  - gambia
+  - ceremony_country
+  - partner_other
+  - opposite_sex
+  :next_node: :outcome_opposite_sex_marriage_in_commonwealth_countries
+  :outcome_node: true
+- :current_node: :partner_opposite_or_same_sex?
+  :responses:
+  - gambia
+  - ceremony_country
+  - partner_other
+  - same_sex
+  :next_node: :outcome_same_sex_marriage_and_civil_partnership_not_possible
+  :outcome_node: true
+- :current_node: :legal_residency?
+  :responses:
+  - gambia
+  - third_country
+  :next_node: :what_is_your_partners_nationality?
+  :outcome_node: false
+- :current_node: :what_is_your_partners_nationality?
+  :responses:
+  - gambia
+  - third_country
+  - partner_british
+  :next_node: :partner_opposite_or_same_sex?
+  :outcome_node: false
+- :current_node: :partner_opposite_or_same_sex?
+  :responses:
+  - gambia
+  - third_country
+  - partner_british
+  - opposite_sex
+  :next_node: :outcome_opposite_sex_marriage_in_commonwealth_countries
+  :outcome_node: true
+- :current_node: :partner_opposite_or_same_sex?
+  :responses:
+  - gambia
+  - third_country
+  - partner_british
+  - same_sex
+  :next_node: :outcome_same_sex_marriage_and_civil_partnership_not_possible
+  :outcome_node: true
+- :current_node: :what_is_your_partners_nationality?
+  :responses:
+  - gambia
+  - third_country
+  - partner_local
+  :next_node: :partner_opposite_or_same_sex?
+  :outcome_node: false
+- :current_node: :partner_opposite_or_same_sex?
+  :responses:
+  - gambia
+  - third_country
+  - partner_local
+  - opposite_sex
+  :next_node: :outcome_opposite_sex_marriage_in_commonwealth_countries
+  :outcome_node: true
+- :current_node: :partner_opposite_or_same_sex?
+  :responses:
+  - gambia
+  - third_country
+  - partner_local
+  - same_sex
+  :next_node: :outcome_same_sex_marriage_and_civil_partnership_not_possible
+  :outcome_node: true
+- :current_node: :what_is_your_partners_nationality?
+  :responses:
+  - gambia
+  - third_country
+  - partner_other
+  :next_node: :partner_opposite_or_same_sex?
+  :outcome_node: false
+- :current_node: :partner_opposite_or_same_sex?
+  :responses:
+  - gambia
+  - third_country
+  - partner_other
+  - opposite_sex
+  :next_node: :outcome_opposite_sex_marriage_in_commonwealth_countries
+  :outcome_node: true
+- :current_node: :partner_opposite_or_same_sex?
+  :responses:
+  - gambia
+  - third_country
+  - partner_other
+  - same_sex
+  :next_node: :outcome_same_sex_marriage_and_civil_partnership_not_possible
   :outcome_node: true
 - :current_node: :country_of_ceremony?
   :responses:
