--- a/test/data/marriage-abroad-files.yml
+++ b/test/data/marriage-abroad-files.yml
@@ -180,6 +180,25 @@ lib/smart_answer_flows/marriage-abroad/outcomes/countries/egypt/uk/partner_other
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/france/_opposite_sex.govspeak.erb: 52cc5676000cdd6fad6e0f20c0cbc0fa
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/france/_same_sex.govspeak.erb: 52cc5676000cdd6fad6e0f20c0cbc0fa
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/france/_title.govspeak.erb: 89e48e72170d1df47f28b434ae630ecf
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/gambia/_title.govspeak.erb: 1cf4120033154fbc3ac7af82ab70664c
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/gambia/ceremony_country/partner_british/_opposite_sex.govspeak.erb: a20bb27661eb47ae409183abb1472561
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/gambia/ceremony_country/partner_british/_same_sex.govspeak.erb: 016c1cbf7dc5e328912f6a1a32dfd8f8
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/gambia/ceremony_country/partner_local/_opposite_sex.govspeak.erb: 5a33eba26852a1d3a6b6772b76b4cf01
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/gambia/ceremony_country/partner_local/_same_sex.govspeak.erb: 016c1cbf7dc5e328912f6a1a32dfd8f8
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/gambia/ceremony_country/partner_other/_opposite_sex.govspeak.erb: 5a33eba26852a1d3a6b6772b76b4cf01
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/gambia/ceremony_country/partner_other/_same_sex.govspeak.erb: 016c1cbf7dc5e328912f6a1a32dfd8f8
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/gambia/third_country/partner_british/_opposite_sex.govspeak.erb: c72e83e1219509688aa36a9b2687c287
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/gambia/third_country/partner_british/_same_sex.govspeak.erb: 016c1cbf7dc5e328912f6a1a32dfd8f8
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/gambia/third_country/partner_local/_opposite_sex.govspeak.erb: 2d3445dab2eeef3287726c8349de38c2
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/gambia/third_country/partner_local/_same_sex.govspeak.erb: 016c1cbf7dc5e328912f6a1a32dfd8f8
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/gambia/third_country/partner_other/_opposite_sex.govspeak.erb: 2d3445dab2eeef3287726c8349de38c2
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/gambia/third_country/partner_other/_same_sex.govspeak.erb: 016c1cbf7dc5e328912f6a1a32dfd8f8
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/gambia/uk/partner_british/_opposite_sex.govspeak.erb: 5a4077b4e1bad5b84b209bb49ede3a16
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/gambia/uk/partner_british/_same_sex.govspeak.erb: 016c1cbf7dc5e328912f6a1a32dfd8f8
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/gambia/uk/partner_local/_opposite_sex.govspeak.erb: 0480f6222df00b196f1b642532212e18
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/gambia/uk/partner_local/_same_sex.govspeak.erb: 016c1cbf7dc5e328912f6a1a32dfd8f8
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/gambia/uk/partner_other/_opposite_sex.govspeak.erb: 0480f6222df00b196f1b642532212e18
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/gambia/uk/partner_other/_same_sex.govspeak.erb: 016c1cbf7dc5e328912f6a1a32dfd8f8
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/hungary/_title.govspeak.erb: 06ea7117275c8ab9ae99421f9877e3d1
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/hungary/ceremony_country/partner_british/_opposite_sex.govspeak.erb: 6d62235d8858e92063837997f27ef666
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/hungary/ceremony_country/partner_british/_same_sex.govspeak.erb: c3fc43c96008806c77b5fba56b8c3912
