Implementation for retrieving 18 outcome countries
This commit adds implementation and tests for retrieving 18 outcome
countries.

This defines a countries_with_18_outcomes key in the yaml file and in
effect moves the countries list.

A key error exception is expected to be thrown if countries_with_18_outcomes
isn't defined in the yaml file.

Only arrays can be returned from countries_with_18_outcomes from marriage
abroad data query object

--- a/lib/data/marriage_abroad_data.yml
+++ b/lib/data/marriage_abroad_data.yml
@@ -1,1 +1,28 @@
 ---
+countries_with_18_outcomes:
+  - chile
+  - china
+  - colombia
+  - cyprus
+  - denmark
+  - egypt
+  - france
+  - gambia
+  - hungary
+  - iran
+  - ireland
+  - italy
+  - jordan
+  - latvia
+  - mozambique
+  - philippines
+  - poland
+  - portugal
+  - south-africa
+  - sweden
+  - tanzania
+  - thailand
+  - tunisia
+  - turkey
+  - usa
+  - vietnam
