Implementation for retrieving 2 outcome countries
This commit adds implementation and tests for retrieving 2 outcome
countries.

This defines a countries_with_2_outcomes key in the yaml file and in
effect moves the countries list.

A key error exception is expected to be thrown if countries_with_2_outcomes
isn't defined in the yaml file.

Only arrays can be returned from countries_with_2_outcomes from marriage
abroad data query object

--- a/lib/data/marriage_abroad_data.yml
+++ b/lib/data/marriage_abroad_data.yml
@@ -26,3 +26,12 @@ countries_with_18_outcomes:
   - turkey
   - usa
   - vietnam
+countries_with_2_outcomes:
+  - china
+  - france
+  - ireland
+  - italy
+  - philippines
+  - thailand
+  - turkey
+  - usa
