--- a/test/data/marriage-abroad-questions-and-responses.yml
+++ b/test/data/marriage-abroad-questions-and-responses.yml
@@ -1,8 +1,13 @@
 ---
 :country_of_ceremony?:
+- afghanistan
 - albania
+- algeria
 - american-samoa
+- andorra
+- angola
 - anguilla
+- antigua-and-barbuda
 - argentina
 - armenia
 - aruba
@@ -10,84 +15,149 @@
 - austria
 - azerbaijan
 - bahamas
+- bahrain
+- bangladesh
+- barbados
 - belarus
 - belgium
+- belize
+- benin
+- bermuda
+- bhutan
+- bolivia
 - bonaire-st-eustatius-saba
+- bosnia-and-herzegovina
+- botswana
 - brazil
 - british-indian-ocean-territory
 - british-virgin-islands
 - brunei
+- bulgaria
+- burkina-faso
 - burma
 - burundi
-- bulgaria
 - cambodia
+- cameroon
 - canada
+- cape-verde
+- cayman-islands
+- central-african-republic
+- chad
 - chile
 - china
 - colombia
+- comoros
+- congo
 - costa-rica
 - cote-d-ivoire
 - croatia
+- cuba
+- curacao
 - cyprus
 - czech-republic
-- denmark
 - democratic-republic-of-the-congo
+- denmark
+- djibouti
+- dominica
 - dominican-republic
 - ecuador
 - egypt
+- el-salvador
+- equatorial-guinea
+- eritrea
 - estonia
+- ethiopia
+- falkland-islands
+- fiji
 - finland
 - france
 - french-guiana
 - french-polynesia
+- gabon
 - gambia
-- germany
 - georgia
+- germany
+- ghana
 - gibraltar
 - greece
+- grenada
 - guadeloupe
 - guatemala
+- guinea
+- guinea-bissau
+- guyana
+- haiti
+- honduras
 - hong-kong
 - hungary
 - iceland
 - india
 - indonesia
 - iran
+- iraq
 - ireland
+- israel
 - italy
+- jamaica
 - japan
 - jordan
 - kazakhstan
 - kenya
+- kiribati
 - kosovo
 - kuwait
 - kyrgyzstan
 - laos
 - latvia
 - lebanon
+- lesotho
+- liberia
+- libya
+- liechtenstein
 - lithuania
 - luxembourg
 - macao
 - macedonia
+- madagascar
+- malawi
 - malaysia
+- maldives
+- mali
 - malta
+- marshall-islands
 - martinique
+- mauritania
+- mauritius
 - mayotte
 - mexico
+- micronesia
+- moldova
 - monaco
+- mongolia
 - montenegro
+- montserrat
 - morocco
 - mozambique
+- namibia
+- nauru
+- nepal
 - netherlands
 - new-caledonia
 - new-zealand
 - nicaragua
+- niger
+- nigeria
 - north-korea
 - norway
 - oman
+- pakistan
+- palau
+- panama
+- papua-new-guinea
 - paraguay
 - peru
 - philippines
+- pitcairn-island
 - poland
 - portugal
 - qatar
@@ -96,34 +166,64 @@
 - russia
 - rwanda
 - saint-barthelemy
+- samoa
 - san-marino
+- sao-tome-and-principe
 - saudi-arabia
-- seychelles
+- senegal
 - serbia
+- seychelles
+- sierra-leone
 - singapore
 - slovakia
 - slovenia
+- solomon-islands
 - somalia
 - south-africa
+- south-georgia-and-south-sandwich-islands
 - south-korea
+- south-sudan
 - spain
+- sri-lanka
+- st-helena-ascension-and-tristan-da-cunha
+- st-kitts-and-nevis
+- st-lucia
 - st-maarten
 - st-martin
 - st-pierre-and-miquelon
+- st-vincent-and-the-grenadines
+- sudan
+- suriname
+- swaziland
 - sweden
 - switzerland
 - syria
+- taiwan
+- tajikistan
 - tanzania
 - thailand
+- timor-leste
+- togo
+- tonga
+- trinidad-and-tobago
 - tunisia
 - turkey
 - turkmenistan
+- turks-and-caicos-islands
+- tuvalu
+- uganda
+- ukraine
 - united-arab-emirates
+- uruguay
 - usa
 - uzbekistan
+- vanuatu
+- venezuela
 - vietnam
 - wallis-and-futuna
+- western-sahara
 - yemen
+- zambia
 - zimbabwe
 :legal_residency?:
 - uk
